--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Document</title>
+	<link rel="icon" href="ico/fanny.png">
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<title>Esther💫</title>
 </head>
 <body>
 	<section>
 		<div>
 			<br><br><br>
 			<br><br><br>
-			<h3>
-				Si llegaste aquí es por qué si eres rebelde sin causa :v ahahaha
-			</h3>
-			<h3>
-				antes de ver mi chiste malo, por favor escucha el audio que te envié,
-			</h3>	
-			<h3>
-				es un chiste decente antes de ir a los peor</h3>
-			</h3>
+			<h2>
+				Si llegaste aquí es por qué si eres rebelde sin causa 🤪 ahahaha...
+			</h2>
+			<h2>
+				Antes de leer mi chiste malo, por favor escucha el audio que te envié 😬,
+			</h2>	
+			<h2>
+				digamos que es un chiste decente antes de ir a lo peor...</h3>
+			</h2>
 			<br>	
 		</div>
 		<div>
-			<br><br>
+			<br>
 			<audio controls id="bgAudio" style="margin: 0 auto; display: block;">
 				<source src="mp3/fanny.m4a" >
 			</audio>
@@ -33,16 +35,16 @@
 				audio.volume = 0.2;
 			</script>
 		</div>
-		<br><br><br><br>
+		<br><br><br>
 		<div>
-			<button class="Click-here">Dale click aquí</button>
+			<button class="Click-here">Dale click aquí ✅</button>
 			<div class="custom-model-main">
 				<div class="custom-model-inner">
 				   <div class="close-btn">×</div>
 				   <div class="custom-model-wrap">
 					  <div class="pop-up-content-wrap">
-						 <h2>¿Te soy sincero?Soy malo con los chistes asi que igual gracias por tiempo</h2>
-						 <p>Qué tengas un buen incio de semana</p>
+						 <p>¿Te soy sincero 🙄? Soy malo con los chistes 🤡, así que igual gracias por tu tiempo.</p>
+						 <h3>Que tengas un buen inicio de semana 🤗🤞</h3>
 					  </div>
 				   </div>
 				</div>
