--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 		<br><br><br>
 		<div>
-			<button class="Click-here">Dale click aquí ✅</button>
+			<button class="Click-here">Dale clic aquí ✅</button>
 			<div class="custom-model-main">
 				<div class="custom-model-inner">
 				   <div class="close-btn">×</div>
